--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "FOCO by VitreumStudios: Gestión y Enfoque",
-  "short_name": "FOCO",
+  "name": "F.O.C.O by VitreumStudios: Gestión y Enfoque",
+  "short_name": "F.O.C.O",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#0C0A1A",
